[package]
name = "pdfcommands"
version = "0.1.0"
edition = "2021"

[dependencies]
bytes = "1.8.0"
chrono = "0.4.38"
http-body-util = "0.1.2"
hyper = { version = "1.5.1", features = ["full"] }
hyper-util = { version = "0.1.10", features = ["full"] }
jyframe = { version = "0.1.0", path = "../crate-frame" }
log = "0.4.22"
mime_guess = "2.0.5"
regex = "1.11.1"
serde_json = "1.0.133"
tauri = "2.1.1"
tokio = { version = "1.41.1", features = ["full"] }
urlencoding = "2.1.3"
